--- a/resources/scss/base/_common.scss
+++ b/resources/scss/base/_common.scss
@@ -209,7 +209,7 @@ textarea {
 	justify-content: center;
 	align-items: center;
 	border-radius: 20px;
-	background: #FAFBF1;
+	background: #1160a2;
 	opacity: 0;
 	transition: all 0.2s ease-in-out; 
 	transform: scale(0.8);
