--- a/resources/scss/components/_price-list.scss
+++ b/resources/scss/components/_price-list.scss
@@ -30,7 +30,7 @@
         display: flex;
         align-items: center;
         font-size: 16px;
-        $color: $dark;
+        color: $white !important;
 
         &-name {
             padding-right: 15px;
