--- a/resources/scss/components/_contact-form.scss
+++ b/resources/scss/components/_contact-form.scss
@@ -6,10 +6,10 @@
 	&__title {
 		font-size: 18px;
 		margin-bottom: 20px;
-		color: $dark;
+		color: white;
 	}
 	&__label {
-		color: $dark;
+		color: white;
 		font-weight: 700;
 		font-size: 16px;
 	}
