--- a/resources/scss/components/_services-section.scss
+++ b/resources/scss/components/_services-section.scss
@@ -5,8 +5,9 @@
     line-height: 61px;
     letter-spacing: 0em;
     text-align: left;
-    margin-bottom: 40px;
+    margin-block: 40px;
 }
+
 .services-canvas
 {
     @media screen and (max-width: 575px) {
