--- a/resources/scss/components/_diagnostic-card.scss
+++ b/resources/scss/components/_diagnostic-card.scss
@@ -1,3 +1,24 @@
+.services {
+    .row {
+        column-gap: 145px;
+        @media screen and (max-width: 1550px) {
+            column-gap: 10%;
+        }
+        @media screen and (max-width: 1200px) {
+            column-gap: 30px;
+        }
+        @media screen and (max-width: 1000px) {
+            column-gap: 70px;
+        }
+    }
+
+    .container-fluid {
+        @media screen and (max-width: 1550px) {
+            max-width: 1040px;
+        }
+    }
+}
+
 .diagnostic-card {
     position: relative;
     border-radius: 20px;
@@ -70,7 +91,8 @@
     line-height: 61px;
     letter-spacing: 0em;
     text-align: left;
-    margin-bottom: 40px;
+    margin-block: 70px;
+    color: $dark;
 }
 .services-canvas
 {
@@ -86,16 +108,13 @@
     gap: 12px;
     margin-bottom: 30px;
     text-decoration: none;
-
-
-
     &__name {
         font-family: 'Panton';
         font-size: 20px;
         margin-bottom: 6px;
         font-weight: 700;
         line-height: 20px;
-        color: #3C515C;
+        color: $dark;
         @media screen and (min-width: 767px){font-size: 18px;}
     }
     &__description
@@ -104,19 +123,19 @@
         font-size: 16px;
         font-weight: 400;
         line-height: 18px;
-        color:#ACB5BB;
+        color: $main;
         @media screen and (min-width: 767px)
         {
             font-size: 16px;
             margin-bottom: 5px;
         }
     }
-    @media screen and (min-width: 767px) {
+    @media screen and (max-width: 780px) {
         justify-content: flex-start;
         align-items: center;
         &__name { font-size: 16px;}
         &__description
-        { 
+        {
             font-size: 12px;
             margin-bottom: 2px;
             font-size: 14px;
