--- a/resources/scss/base/_variables.scss
+++ b/resources/scss/base/_variables.scss
@@ -9,7 +9,7 @@ $input-padding-x: 15px;
 
 // Accordion
 $accordion-button-color:                  $dark;
-$accordion-button-bg:                     #F6F5F5;
+$accordion-button-bg:                     transparent;
 $accordion-button-active-bg:             	$dark;
 $accordion-button-active-color:           $white;
 $accordion-button-padding-y:              20px;
