--- a/resources/scss/components/_price-list.scss
+++ b/resources/scss/components/_price-list.scss
@@ -22,7 +22,7 @@
     &__wrapper {
         padding: 20px 30px;
         background-color: $secondary;
-        border-radius: 10px;
+        border-radius: 0 10px 10px 10px;
     }
 
     &__item {
