--- a/resources/scss/components/_news-card.scss
+++ b/resources/scss/components/_news-card.scss
@@ -1,6 +1,8 @@
 .news-card {
 	display: block;
 	text-decoration: none;
+	border-radius: 25px;
+	overflow: hidden;
 	&:hover {
 		.news-card__body::before {
 			background-color: $dark;
@@ -33,14 +35,13 @@
 			right: 0;
 			bottom: 0;
 			content: '';
-			width: 40px;
-			height: 40px;
+			width: 100%;
+			height: 50px;
 			background-color: $main;
 			background-image: url('../images/svg/arrow.svg');
 			background-repeat: no-repeat;
 			background-size: 20px;
 			background-position: center;
-			border-top-left-radius: 10px;
 			@include base-transition(background-color)
 		}
 	}
@@ -49,22 +50,6 @@
 	}
 	&__excerpt {
 		color: $dark;
-	}
-
-	@media screen and (max-width: 1399px) {
-
-	}
-	
-	@media screen and (max-width: 1199px) {
-
-	}
-	
-	@media screen and (max-width: 991px) {
-
-	}
-	
-	@media screen and (max-width: 767px) {
-
 	}
 	
 	@media screen and (max-width: 575px) {
