--- a/resources/scss/pages/_diagnostics-page.scss
+++ b/resources/scss/pages/_diagnostics-page.scss
@@ -7,7 +7,8 @@
     }
 
     &__photo {
-        padding-left: 40px;
+        border-radius: 25px;
+        overflow: hidden;
     }
 
     @media screen and (max-width: 767px) {
