--- a/resources/scss/pages/_employee-page.scss
+++ b/resources/scss/pages/_employee-page.scss
@@ -12,7 +12,7 @@
 		background-color: $secondary;
 		font-size: 16px;
 		border-radius: 20px;
-		color: $dark;
+		color: $white;
 		strong {
 			margin-left: 15px;
 		}
@@ -25,7 +25,6 @@
 			width: 400px;
 			height: 400px;
 			object-fit: cover;
-			border-radius: 50%;
 		}
 	}
 
